<resources>
    <string name="app_name">My Application3</string>
    <string name="simform">Simform</string>
    <string name="enter_something">Enter Something</string>
    <string name="ok">OK</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="select_gender">Select Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dark_mode">Dark Mode:</string>
    <string name="linearlayout">Linear Layout</string>
    <string name="enter_feedback_deatils_to_send_to_the_devloper">Enter feedback details to send to the developer:</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="feedback_deatil_is">Feedback Detail is..</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="button">Button</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="constrain_layout">Constrain Layout</string>
    <string name="this_is_a_bookmark">this is a bookmark</string>
    <string name="bookmark">Bookmark</string>
    <string name="click">click</string>
    <string name="listview">ListView</string>
    <string name="item1">Item1</string>
    <string name="itemsubtext">ItemSubtext</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="name">Name</string>
    <string name="toastmessage">This is a OK Button</string>
    <string name="gridrecycler">GridRecycler</string>
    <string name="text">Text</string>
    <string-array name="country">
        <item>Select</item>
        <item>India</item>
        <item>Greece</item>
        <item>Denmark</item>
        <item>Iran</item>
        <item>Brazil</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="call_fragment">Call Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="viewpager">ViewPager</string>
    <string name="slide1">Slide1</string>
    <string name="viewpager_recycler">ViewPager Recycler</string>
    <string name="viewpager_two">ViewPager Two</string>
    <string name="my_profile">My Profile</string>
    <string name="navigationview">NavigationView</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="state">State</string>
    <string name="expandable_listview">Expandable ListView</string>
    <string name="language_c">C is a general-purpose, procedural computer programming language supporting structured programming, lexical variable scope, and recursion, with a static type system. By design, C provides constructs that map efficiently to typical machine instructions.</string>
    <string name="language_java">Java is a high-level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
    <string name="language_python">Python is an interpreted high-level general-purpose programming language. Its design philosophy emphasizes code readability with its use of significant indentation. Its language constructs and object-oriented approach aim to help programmers write clear, logical code for small- and large-scale projects.</string>
    <string name="language_kotlin">Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference. Kotlin is designed to interoperate fully with Java, and the JVM version of Kotlin</string>
    <string name="description_text">description_text</string>
    <string name="expandable_recyclerview">ExpandableRecyclerView</string>
    <string name="would_you_like_an_email_response">would_you_like_an_email_response</string>
    <string name="this_is_a_custom_toast">this_is_a_custom_toast</string>
    <string name="constrainlayout">ConstrainLayout</string>
    <string name="framelayout">Framelayout</string>
    <string name="gridlayout">Gridlayout</string>
    <string name="relativelayout">Relativelayout</string>
    <string name="Grdiwithrecyclerview">Grid Using Recycler</string>
    <string name="viewPager">ViewPager</string>
    <string name="camera">Camera</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="status">Status</string>
    <string name="layout">Layouts</string>
    <string name="bottomnavigayionview">BottomNavigayionView</string>
    <string name="fragment">fragment</string>
    <string name="enter_data">enter_data</string>
    <string name="explicit_intent">explicit_intent</string>
    <string name="implicit_intent">implicit_intent</string>
    <string name="pending_intent">pending_intent</string>
    <string name="first_fragment_label">First Fragmentt</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="description">A control that displays one or more buttons along the bottom edge of your interface.</string>
    <string name="notificationTitle">Notification Title</string>
    <string name="notificationDescription">Notification Description</string>
    <string name="exampleTitle">Example Title</string>
    <string name="exampleDescription">Example Description</string>
    <string name="data">Data</string>
    <string name="youTube">https://www.youtube.com/</string>
    <string name="searchName">Search Name</string>
    <string name="webview">WebView</string>
    <string name="lifecycle">LifeCycle</string>
    <string name="apiwithrecyclerview">APIWithRecyclerView</string>
    <string name="firstname">firstName:</string>
    <string name="lastname">lastName:</string>
    <string name="email">Email:</string>
    <string name="api_calling">API Calling</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="cityslicka">cityslicka</string>
    <string name="eve_holt_reqres_in">eve.holt@reqres.in</string>
</resources>