<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiffrentLayout">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/linearlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/relative_layout"
        app:layout_constraintTop_toBottomOf="@+id/btn_linear" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_constrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/constrain_layout"
        app:layout_constraintTop_toBottomOf="@+id/btn_relative" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/grid_layout"
        app:layout_constraintTop_toBottomOf="@+id/btn_constrain" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/frame_layout"
        app:layout_constraintTop_toBottomOf="@+id/btn_grid" />
</androidx.constraintlayout.widget.ConstraintLayout>