<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".LinearLayout">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_deatails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/enter_feedback_deatils_to_send_to_the_devloper"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_bordar"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_bordar"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/item_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_bordar"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/spinner_icon" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_bordar"
        android:hint="@string/feedback_deatil_is"
        android:inputType="textMultiLine"
        android:lines="5"
        android:paddingStart="10dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chechbox_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="10dp"
        android:text="@string/would_you_like_an_email_response"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_bordar"
        android:text="@string/send_feedback"
        android:textStyle="bold" />

</LinearLayout>